# planz

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
backend/: Dockerfile  cron-create-stats.py  entrypoint.sh  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: main.py
backend/app/api/routes/: plants.py  stats.py
backend/app/core/: config.py  db.py
backend/migrations/: env.py
backend/migrations/versions/: 1f09d6baf6a8_cascade_delete_plant_stats.py  ea0e275be413_initial_migration.py
docs/: backend.md  frontend.md  sensor.md
docs/stls/: Case_v13.stl  Case_v15.stl  Lid_v6.stl
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  fontawesome.ts  main.ts  router.ts  style.css  types.ts
frontend/src/components/: PlantImage.vue  PlantInformation.vue  PlantStatsChart.vue  Sidebar.vue
frontend/src/stores/: plants.ts
frontend/src/views/: PlantDetail.vue  PlantView.vue  SettingsView.vue
sensor/: index.html  main.py
