[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "psycopg2-binary>=2.9.10",
    "fastapi-utilities>=0.3.0",
    "requests>=2.32.3",
    "filetype>=1.2.0",
    "alembic>=1.15.2",
]
